# ai-codenames

./: README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
codenames/: Dockerfile  Makefile  pyproject.toml  requirements.txt  schema.graphql
codenames/codenames/: dependency_factory.py  main.py  words.txt
codenames/codenames/game/: actions.py  board.py  game.py
codenames/codenames/inference/: ai_spymaster.py
codenames/codenames/schema/: schema.py
frontend/: .env.development  .env.production  Dockerfile  Makefile  README.md  codegen.ts  graphql.schema.json  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: LandingPage.tsx  game.tsx
frontend/src/gql/: gql.ts  graphql.ts
